HCL added Scoped Function name support (Terraform 1.8)